syntax = "proto3";
package flare;
  
message CollectionMetadata {
    string name = 1;
    repeated uint64 shard_ids = 2;
    uint32 replication = 3;
}

message ShardMetadata {
    uint64 id  = 1;
    string collection = 2;
    optional uint64 primary = 3;
    repeated uint64 replica = 4;
}